<resources>
    <string name="sample_app_name">DjiBox</string>
    <string name="action_settings">Settings</string>
    <string name="sdk_version">DJI SDK Version: %1$s</string>
    <string name="hint_firmware_upgrade_in_LDM">Enable firmware upgrade under LDM mode</string>
    <string name="connection_loose">Status: No Product Connected</string>
    <string name="connection_only_rc">Status: Only RC Connected</string>
    <string name="model_not_available">Firmware version:N/A</string>
    <string name="product_information">Product Information</string>
    <string name="sdk_registration_message">SDK Registration Failed. Please check the bundle ID and your network
        connectivity. </string>
    <string name="sdk_registration_success_message">SDK Registered Successfully.</string>
    <string name="sdk_registration_doing_message">Registering, pls wait...</string>
    <string name="activity_component_list">Component List</string>
    <string name="start_payload">Start Payload</string>
    <string name="start_payload_send_data">Send Data Activity</string>
    <string name="payload_widget">Payload Widget</string>
    <string name="start_payload_fail">Can not find the payload activity!</string>
    <string name="success">Success</string>
    <string name="login">Login</string>
    <string name="component_listview_component">Component</string>
    <string name="component_listview_camera">Camera</string>
    <string name="component_listview_gimbal">Gimbal</string>
    <string name="component_listview_flight_controller">Flight Controller</string>
    <string name="component_listview_battery">Battery</string>
    <string name="component_listview_airlink">Air Link</string>
    <string name="component_listview_remote_controller">Remote Controller</string>
    <string name="component_listview_mobile_remote_controller">Mobile Remote Controller</string>
    <string name="component_listview_mission_manager">Mission Manager (Deprecated)</string>
    <string name="component_listview_timeline_mission_control">Timeline Mission Control</string>
    <string name="component_listview_bluetooth">Bluetooth</string>
    <string name="component_listview_access_locker">Access Locker</string>
    <string name="component_listview_accessory_aggregation">Accessory Aggregation</string>
    <string name="component_listview_audio_file_list_manager">Audio File List Manager</string>
    <string name="component_listview_live_stream">Live Stream</string>
    <string name="component_listview_lidar_view">Lidar</string>
    <string name="component_listview_firmware_upgrade">Firmware Upgrade</string>
    <string name="component_listview_utmiss">UTMISS</string>
    <string name="component_listview_multiple_lens_camera">Multiple Lens Camera</string>
    <string name="component_listview_radar">Radar</string>
    <string name="component_listview_ldm">LDM</string>
    <string name="component_listview_sdk_4_0">4.0 New Interfaces</string>
    <string name="component_listview_waypoint_mission_operator">Waypoint Mission Operator</string>
    <string name="component_listview_follow_me_mission_operator">Follow Me Mission Operator</string>
    <string name="component_listview_keyed_interface">Keyed Interface Sample</string>
    <string name="component_listview_sdk_4_1">4.1 New Interfaces</string>
    <string name="component_listview_app_activation">App Activation and ADSB View</string>
    <string name="component_listview_sdk_4_5">4.5 New Interfaces</string>
    <string name="component_listview_sdk_4_6">4.6 New Interfaces</string>
    <string name="component_listview_sdk_4_8">4.8 New Interfaces</string>
    <string name="component_listview_sdk_4_9">4.9 New Interfaces</string>
    <string name="component_listview_sdk_4_11">4.11 New Interfaces</string>
    <string name="component_listview_sdk_4_12">4.12 New Interfaces</string>
    <string name="component_listview_sdk_4_14">4.14 New Interfaces</string>
    <string name="component_listview_sdk_4_15">4.15 New Interfaces</string>
    <string name="component_listview_sdk_4_16">4.16 New Interfaces</string>
    <string name="component_listview_waypointv2">WaypointV2 Mission Operator</string>
    <string name="component_listview_flight_hub">Flight Hub</string>
    <string name="component_listview_payload">Payload</string>
    <string name="component_listview_redirect_to_djigo">Redirect to DJI Go</string>
    <string name="component_listview_redirect_go4">DJI Go 4</string>
    <string name="component_listview_redirect_go4_failure">Cannot redirect to DJI Go 4, Please check if DJI Go 4 has installed</string>
    <string name="component_listview_redirect_go">DJI Go</string>
    <string name="component_listview_redirect_go_failure">Cannot redirect to DJI Go, Please check if DJI Go has installed</string>
    <string name="component_listview_key_manager">KeyManager</string>
    <string name="key_manager_listview_key_Interface">Key Manager View</string>
    <string name="key_manager_component_spinner_title">Component</string>
    <string name="key_manager_sub_component_spinner_title">Sub Component</string>
    <string name="key_manager_key_interface_title">Key Interface</string>
    <string name="key_manager_component_index_title">Component Index</string>
    <string name="key_manager_get_value_desc">Get Value</string>
    <string name="key_manager_set_value_desc">Set Value</string>
    <string name="key_manager_listen_key_desc">Listen Key</string>
    <string name="camera_subtitle_general">General</string>
    <string name="camera_listview_push_info">Push Info</string>
    <string name="camera_listview_iso">Set/Get ISO</string>
    <string name="camera_subtitle_shoot_photo">Shoot Photo</string>
    <string name="camera_listview_shoot_single_photo">Shoot Single Photo</string>
    <string name="camera_listview_shoot_super_resolutiob_photo">Shoot Super Resolution Photo</string>
    <string name="camera_listview_shoot_interval_photo">Shoot Interval Photo</string>
    <string name="camera_subtitle_record_video">Record Video</string>
    <string name="camera_listview_record_video">Record Video</string>
    <string name="camera_subtitle_playback">Playback</string>
    <string name="camera_listview_playback_push_info">Playback Push Info</string>
    <string name="camera_listview_playback_push_info_description">Playback State Information</string>
    <string name="camera_listview_playback_command">Playback Commands</string>
    <string name="camera_listview_playback_download">Playback Download</string>
    <string name="camera_subtitle_media_download">Media Download</string>
    <string name="camera_listview_download_media">Download Media</string>
    <string name="camera_listview_media_playback">Media Playback</string>
    <string name="moveToPosition">Skip Time</string>
    <string name="gimbal_subtitle_rotate_gimbal">Rotate Gimbal</string>
    <string name="gimbal_listview_push_info">Push Info</string>
    <string name="gimbal_listview_rotate_gimbal">Rotate With Speed</string>
    <string name="gimbal_listview_gimbal_capability">Gimbal Capability</string>
    <string name="battery_subtitle">Battery Information</string>
    <string name="battery_listview_push_info">Push Info</string>
    <string name="battery_listview_set_get_discharge_day">Set/Get Discharge Day</string>
    <string name="remote_controller_subtitle">Remote Controller Information</string>
    <string name="remote_controller_listview_push_info">Push Info</string>
    <string name="flight_controller_subtitle_general">General</string>
    <string name="flight_controller_listview_compass_calibration">Compass Calibration</string>
    <string name="flight_controller_listview_flight_limitation">Flight Limitation</string>
    <string name="flight_controller_subtitle_orientation_mode">Orientation Mode</string>
    <string name="flight_controller_listview_orientation_mode">Orientation Mode</string>
    <string name="flight_controller_subtitle_virtual_stick">Virtual Stick</string>
    <string name="flight_controller_listview_virtual_stick">Virtual Stick</string>
    <string name="flight_controller_subtitle_intelligent_flight_assistant">Intelligent Flight Assistant</string>
    <string name="flight_controller_listview_intelligent_flight_assistant">Intelligent Flight Assistant</string>
    <string name="flight_controller_listview_networkRTK">Network RTK</string>
    <string name="airlink_subtitle_wifi_airlink">WiFi Airlink</string>
    <string name="airlink_listview_wifi_set_get_ssid">Set/Get WiFi SSID</string>
    <string name="airlink_listview_wifi_reboot_wifi">Reboot WiFi</string>
    <string name="airlink_subtitle_lb_airlink">Light Bridge Airlink</string>
    <string name="airlink_listview_lb_set_get_channel">Set/Get LBAirlink Channel</string>
    <string name="airlink_listview_ocusync_set_get_channel">Set/Get OcusyncAirlink Channel</string>
    <string name="shoot_single_photo">Shoot Single Photo</string>
    <string name="shoot_single_photo_descritpion">Shoot Single Photo</string>
    <string name="record_video_start_record">Start Record</string>
    <string name="record_video_stop_record">Stop Record</string>
    <string name="record_video_initial_time">00:00:00</string>
    <string name="fetch_media_view_description">Fetch Media</string>
    <string name="fetch_media_view_fetch_thumbnail">Fetch Thumbnail</string>
    <string name="fetch_media_view_fetch_preview">Fetch Preview</string>
    <string name="fetch_media_view_fetch_media">FetchMedia</string>
    <string name="waypoint_task_config_title">航点任务配置</string>
    <string name="waypoint_flight_speed">巡航速度</string>
    <string name="waypoint_finish_action_title">任务结束后动作</string>
    <string name="waypoint_finish_no_action">无动作</string>
    <string name="waypoint_finish_go_home">返航</string>
    <string name="waypoint_finish_auto_land">自动着陆</string>
    <string name="waypoint_finish_to_first_point">回到第一个定位点</string>
    <string name="waypoint_heading_mode_title">Heading Mode</string>
    <string name="waypoint_auto">Auto</string>
    <string name="waypoint_remote_controller">Remote Controller</string>
    <string name="waypoint_toward_point_of_interest">Interest Point</string>
    <string name="waypoint_initial_direction">Initial Direction</string>
    <string name="waypoint_waypoint_heading">Waypoint Heading</string>
    <string name="confirm">确定</string>
    <string name="waypoint_path_mode_normal">Normal</string>
    <string name="waypoint_path_mode_curved">Curved</string>
    <string name="waypoint_path_mode_title">巡航路径模式</string>
    <string name="waypoint_flight_altitude">巡航高度</string>
    <string name="altitude_m">米</string>
    <string name="waypoint_default_altitude">30</string>
    <string name="hot_point_mission_config_title">配置热点飞行</string>
    <string name="hotpoint_flight_altitude">飞行高度</string>
    <string name="hotpoint_angular_velocity">角速度</string>
    <string name="hotpoint_clockwise_title">是否顺时针飞行</string>
    <string name="hot_point_clockwise_off">逆时针飞行</string>
    <string name="hot_point_clockwise_on">顺时针飞行</string>
    <string name="hotpoint_start_point_title">开始飞行方向点</string>
    <string name="hot_point_start_point_north">北</string>
    <string name="hot_point_start_point_south">南</string>
    <string name="hot_point_start_point_east">东</string>
    <string name="hot_point_start_point_west">西</string>
    <string name="hot_point_start_point_nearest">最近</string>
    <string name="hotpoint_heading_title">HeadingMode</string>
    <string name="hot_point_heading_looking_forward">Looking Forward</string>
    <string name="hot_point_heading_looking_backward">Looking Backward</string>
    <string name="hot_point_heading_toward_hot_point">Towards Hot Point</string>
    <string name="hot_point_heading_away_from_hot_point">Away from hot point</string>
    <string name="hot_point_heading_remote_controller">Controlled by remote controller</string>
    <string name="hot_point_heading_using_initial">Using Initial</string>
</resources>