<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/content_bg">

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="-10dp"
        android:background="@drawable/bg_gradient_tb"
        app:layout_constraintBottom_toBottomOf="@id/ivClose"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:background="@color/gray_progress_bg"
        android:padding="12dp"
        android:src="@drawable/ic_close"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hot_point_mission_config_title"
        android:textColor="@color/textColorPrimary"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="@id/ivClose"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/ivClose" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivClose">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="8dp"
            android:paddingBottom="56dp">

            <TextView
                android:id="@+id/tvAltitudeTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="24dp"
                android:text="@string/hotpoint_flight_altitude"
                android:textColor="@color/textColorSecondary"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/etAltitude"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:gravity="center"
                android:inputType="numberDecimal"
                android:minWidth="40dp"
                android:text="@string/waypoint_default_altitude"
                app:layout_constraintBottom_toBottomOf="@id/tvAltitudeTitle"
                app:layout_constraintStart_toEndOf="@id/tvAltitudeTitle"
                app:layout_constraintTop_toTopOf="@id/tvAltitudeTitle" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/altitude_m"
                app:layout_constraintBottom_toBottomOf="@id/tvAltitudeTitle"
                app:layout_constraintStart_toEndOf="@id/etAltitude"
                app:layout_constraintTop_toTopOf="@id/tvAltitudeTitle" />


            <TextView
                android:id="@+id/tvSpeedTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="20dp"
                android:text="@string/hotpoint_angular_velocity"
                android:textColor="@color/textColorSecondary"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvAltitudeTitle" />


            <TextView
                android:id="@+id/tvSpeedValue"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:textColor="@color/textColorSecondary"
                android:textSize="12sp"
                app:layout_constraintBottom_toBottomOf="@id/tvSpeedTitle"
                app:layout_constraintStart_toEndOf="@id/tvSpeedTitle"
                app:layout_constraintTop_toTopOf="@id/tvSpeedTitle"
                tools:text="1m/s" />

            <SeekBar
                android:id="@+id/speedSeekBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="12dp"
                android:max="20"
                android:min="2"
                android:paddingVertical="12dp"
                app:layout_constraintTop_toBottomOf="@id/tvSpeedTitle" />

            <TextView
                android:id="@+id/tvClockwiseTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="20dp"
                android:text="@string/hotpoint_clockwise_title"
                android:textColor="@color/textColorSecondary"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/speedSeekBar" />


            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switchClockwise"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:checked="true"
                android:textOff="@string/hot_point_clockwise_off"
                android:textOn="@string/hot_point_clockwise_on"
                app:layout_constraintBottom_toBottomOf="@id/tvClockwiseTitle"
                app:layout_constraintStart_toEndOf="@id/tvClockwiseTitle"
                app:layout_constraintTop_toTopOf="@id/tvClockwiseTitle" />

            <TextView
                android:id="@+id/tvStartPointTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="20dp"
                android:text="@string/hotpoint_start_point_title"
                android:textColor="@color/textColorSecondary"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvClockwiseTitle" />

            <RadioGroup
                android:id="@+id/rgStartPoint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="@id/tvStartPointTitle"
                app:layout_constraintTop_toBottomOf="@id/tvStartPointTitle">


                <RadioButton
                    android:id="@+id/startPointNorth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hot_point_start_point_north" />

                <RadioButton
                    android:id="@+id/startPointSouth"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hot_point_start_point_south" />

                <RadioButton
                    android:id="@+id/startPointEast"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hot_point_start_point_east" />


                <RadioButton
                    android:id="@+id/startPointWest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hot_point_start_point_west" />

                <RadioButton
                    android:id="@+id/startPointNearest"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/hot_point_start_point_nearest" />
            </RadioGroup>

            <TextView
                android:id="@+id/tvHeadingTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="20dp"
                android:text="@string/hotpoint_heading_title"
                android:textColor="@color/textColorSecondary"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rgStartPoint" />

            <RadioGroup
                android:id="@+id/rgHeading"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvHeadingTitle">

                <RadioButton
                    android:id="@+id/headingLookingForward"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/hot_point_heading_looking_forward" />

                <RadioButton
                    android:id="@+id/headingLookingBackward"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hot_point_heading_looking_backward" />

                <RadioButton
                    android:id="@+id/headingTowardHotPoint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hot_point_heading_toward_hot_point" />

                <RadioButton
                    android:id="@+id/headingAwayFromHotPoint"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hot_point_heading_away_from_hot_point" />

                <RadioButton
                    android:id="@+id/headingRemoteController"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hot_point_heading_remote_controller" />

                <RadioButton
                    android:id="@+id/headingUsingInitial"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hot_point_heading_using_initial" />
            </RadioGroup>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>


    <ImageButton
        android:id="@+id/ibDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:background="@drawable/bg_action_view"
        android:padding="12dp"
        android:src="@drawable/ic_done"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>